--- a/CodingDojo6/CodingDojo6.csproj
+++ b/CodingDojo6/CodingDojo6.csproj
@@ -69,6 +69,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\ImessageBar.cs" />
     <Compile Include="ViewModel\ItemVm.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\MessageBarVm.cs" />
@@ -76,6 +77,9 @@
     <Compile Include="ViewModel\NavigationService.cs" />
     <Compile Include="ViewModel\OverviewVm.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="Views\MessageBar.xaml.cs">
+      <DependentUpon>MessageBar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MyToys.xaml.cs">
       <DependentUpon>MyToys.xaml</DependentUpon>
     </Compile>
@@ -94,6 +98,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\MessageBar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MyToys.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -138,6 +146,12 @@
     <Resource Include="Image\playmobil1.jpg" />
     <Resource Include="Image\playmobil2.jpg" />
     <Resource Include="Image\playmobil3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\State_Error.png" />
+    <Resource Include="Image\State_Info.png" />
+    <Resource Include="Image\State_Ok.png" />
+    <Resource Include="Image\State_Warning.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
