--- a/CodingDojo6/CodingDojo6.csproj
+++ b/CodingDojo6/CodingDojo6.csproj
@@ -69,6 +69,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Interfaces\IMessageBar.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="Model\MessageState.cs" />
     <Compile Include="ViewModel\ImessageBar.cs" />
